# nton_matching

./: .gitignore  README.md  pyproject.toml
n_to_n_matching/: CHANGELOG.rst  README.md  package.xml
n_to_n_matching/src/gj/: assigned_date.py  grade_class.py  printing.py  requirements.py  responsibility.py  role.py  spreadsheet_access.py  test_data.py  util.py
n_to_n_matching/src/n_to_n_matching/: __main__.py  gj_rsc_matching.py  gj_spreadsheet_access.py  gj_util.py  match_game.py  matcher.py  person_player.py  spreadsheet_access.py  test_main.py  util.py  workdate_player.py
n_to_n_matching/test/: 20240602-updated_gjls_student-master.xlsx  test_algorithm.py  test_gj.py  test_gj_spreadsheet_access.py  test_grade_class.py  test_guardians.yaml  test_pdf.py  test_spreadsheet_access.py  test_volunteer-dates.yaml
